# modeluniversity

./: .env-example  .gitignore  README.md  cirriculum.json  config.yaml  curriculum.json  pyproject.toml  test_questions.json  trainable_data.json  training_questions.json
src/modeluniversity/: cli.py  datagen.py  datagen_models.py  evals.py  evals_models.py  ollama_embeddings.py  opentextbook.py
src/modeluniversity/config/: __init__.py  settings.py
src/taxadvisor/: datagen.py  evals.py
tests/: conftest.py  test_cli.py  test_datagen.py  test_evals.py
tests/data/: test_config.yaml  test_curriculum.json
tests/data/mock_data/: mock_curriculum_generated_by_datagen.pickle  mock_test_questions.json  mock_test_questions_produced_by_datagen.json  mock_training_questions.json  mock_training_questions_produced_by_datagen.json
