[tool.poetry]
name = "taxadvisor"
version = "0.1.0"
description = ""
authors = ["shadi-fsai <163780314+shadi-fsai@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litellm = "^1.55.12"
termcolor = "^2.5.0"
opik = "^1.3.1"
boto3 = "^1.35.89"

[tool.poetry.scripts]
taxadvisor = "taxadvisor.main:main"
datagen = "taxadvisor.datagen:main"
evals = "taxadvisor.evals:main"
transform_to_trainable_json = "taxadvisor.datagen:transform_to_trainable_json"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
