[tool.poetry]
name = "modeluniversity"
version = "0.1.0"
description = ""
authors = ["shadi-fsai <163780314+shadi-fsai@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litellm = "^1.55.12"
termcolor = "^2.5.0"
opik = "^1.3.1"
boto3 = "^1.35.89"
langchain-text-splitters = "^0.3.4"
chromadb = "^0.5.23"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"  # Add pytest for testing
pytest-mock = "^3.11.1"  # For mocking in tests

[tool.poetry.scripts]
datagen = "modeluniversity.datagen:main"
evals = "modeluniversity.evals:main"
transform_to_trainable_json = "modeluniversity.datagen:transform_to_trainable_json"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
